--- a/org.jrebirth.af/core/pom.xml
+++ b/org.jrebirth.af/core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.5.0-SNAPSHOT</version>
+		<version>8.5.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -19,13 +19,13 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>api</artifactId>
-			<version>8.5.0-SNAPSHOT</version>
+			<version>8.5.0</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>preloader</artifactId>
-			<version>8.5.0-SNAPSHOT</version>
+			<version>8.5.0</version>
 			<scope>provided</scope>
 		</dependency>
 
