--- a/org.jrebirth.af/security/pom.xml
+++ b/org.jrebirth.af/security/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.5.0-SNAPSHOT</version>
+		<version>8.5.0</version>
 	</parent>
 	<groupId>org.jrebirth.af</groupId>
 	<artifactId>security</artifactId>
@@ -16,13 +16,13 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.5.0-SNAPSHOT</version>
+			<version>8.5.0</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
-			<version>8.5.0-SNAPSHOT</version>
+			<version>8.5.0</version>
 			<optional>true</optional>
 		</dependency>
 		
