--- a/org.jrebirth.af/showcase/undoredo/pom.xml
+++ b/org.jrebirth.af/showcase/undoredo/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>showcase</artifactId>
-		<version>8.5.0-SNAPSHOT</version>
+		<version>8.5.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -37,12 +37,12 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>undoredo</artifactId>
-			<version>8.5.0-SNAPSHOT</version>
+			<version>8.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
-			<version>8.5.0-SNAPSHOT</version>
+			<version>8.5.0</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
