--- a/org.jrebirth.af/component/pom.xml
+++ b/org.jrebirth.af/component/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.5.0</version>
+		<version>8.5.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -19,20 +19,20 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.5.0</version>
+			<version>8.5.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
-			<version>8.5.0</version>
+			<version>8.5.1-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>preloader</artifactId>
-			<version>8.5.0</version>
+			<version>8.5.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
