--- a/org.jrebirth.af/dialog/pom.xml
+++ b/org.jrebirth.af/dialog/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.5.0</version>
+		<version>8.5.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.jrebirth.af</groupId>
@@ -32,12 +32,12 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.5.0</version>
+			<version>8.5.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
-			<version>8.5.0</version>
+			<version>8.5.1-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
