--- a/org.jrebirth.af/fxform/pom.xml
+++ b/org.jrebirth.af/fxform/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.5.0</version>
+		<version>8.5.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.5.0</version>
+			<version>8.5.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
