--- a/org.jrebirth.af/sample/pom.xml
+++ b/org.jrebirth.af/sample/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.5.0</version>
+		<version>8.5.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -239,13 +239,13 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.5.0</version>
+			<version>8.5.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>preloader</artifactId>
-			<version>8.5.0</version>
+			<version>8.5.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
