--- a/org.jrebirth.af/presentation/pom.xml
+++ b/org.jrebirth.af/presentation/pom.xml
@@ -13,10 +13,6 @@
 	<name>Prez Engine</name>
 	<description>Base files to build a JavaFX slide's presentation</description>
 
-	<properties>
-		<jaxb.version>2.3.1</jaxb.version>
-	</properties>
-
 	<build>
 		<plugins>
 
@@ -28,72 +24,65 @@
 				</configuration>
 			</plugin>
 
-
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jaxb2-maven-plugin</artifactId>
-				<version>2.5.0</version>
+				<groupId>org.jvnet.jaxb</groupId>
+				<artifactId>jaxb-maven-plugin</artifactId>
+				<version>${jaxb.maven.plugin.version}</version>
 				<executions>
 					<execution>
-						<id>xjc</id>
 						<goals>
-							<goal>xjc</goal>
+							<goal>generate</goal>
 						</goals>
+						<configuration>
+							<noFileHeader>true</noFileHeader>
+							<extension>true</extension>
+							<locale>en</locale>
+							<generatePackage>org.jrebirth.af.presentation.model</generatePackage>
+							<generateDirectory>target/generated-sources</generateDirectory>
+							<schemaDirectory>src/main/resources/presentation/</schemaDirectory>
+							<schemaIncludes>
+								<include>Presentation.xsd</include>
+							</schemaIncludes>
+							<plugins>
+								<plugin>
+									<groupId>org.jvnet.jaxb</groupId>
+									<artifactId>jaxb-plugins</artifactId>
+									<version>${jaxb.maven.plugin.version}</version>
+								</plugin>
+							</plugins>
+						</configuration>
 					</execution>
 				</executions>
-
-				<configuration>
-					<sources>
-						<source>src/main/resources/presentation/Presentation.xsd</source>
-					</sources>
-					<packageName>org.jrebirth.af.presentation.model</packageName>
-					<outputDirectory>target/generated-sources</outputDirectory>
-
-					<failOnNoSchemas>false</failOnNoSchemas>
-
-				</configuration>
-
-				<dependencies>
-					<dependency>
-						<groupId>javax.xml.bind</groupId>
-						<artifactId>jaxb-api</artifactId>
-						<version>${jaxb.version}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.glassfish.jaxb</groupId>
-						<artifactId>jaxb-runtime</artifactId>
-						<version>${jaxb.version}</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-web</artifactId>
 			<version>${openjfx.version}</version>
 		</dependency>
-
 		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>${jaxb.version}</version>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>${jaxb.api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
-			<version>${jaxb.version}</version>
+			<version>${jaxb.runtime.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.jvnet.jaxb</groupId>
+			<artifactId>jaxb-plugins-runtime</artifactId>
+			<version>${jaxb.maven.plugin.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
